--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-plugin-patch-env",
   "type": "module",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "license": "MIT",
   "packageManager": "pnpm@7.12.0",
   "description": "",
@@ -12,7 +12,8 @@
   },
   "keywords": [
     "env",
-    "runtimeEnv"
+    "runtimeEnv",
+    "vite-plugin"
   ],
   "sideEffects": false,
   "exports": {
