--- a/examples/package.json
+++ b/examples/package.json
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vite-plugin-patch-env": "workspace:^0.0.1"
+    "vite-plugin-patch-env": "workspace:*"
   }
 }
